--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{
     width: 48% ;
 }
 .Hire-button{
-    background-image: linear-gradient(to right, lightsalmon, tomato);
+    background: linear-gradient(to right, lightsalmon, tomato);
     border: none;
     height: 30px;
     width: 70px;
@@ -21,6 +21,8 @@ h1{
     cursor: pointer;
 
 }
+
+
 .flex{
     display: flex;
     justify-content: space-around;
@@ -38,7 +40,7 @@ h1{
     flex-direction: row-reverse;
 }
 .Resume-button{
-    background-image: linear-gradient(to right, lightsalmon, tomato);
+    background: linear-gradient(to right, lightsalmon, tomato);
         border: none;
         height: 30px;
         width: 128px;
